git api responses extended
