# internal/api/openapi_server.gen.go
@@ -8,6 +8,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/oapi-codegen/runtime"
@@ -31,12 +32,20 @@ const (
 	Symbols      GenerationConfigEncoding = "symbols"
 )
 
-// Defines values for SecretResponseStatus.
+// Defines values for SecretStatusCurrentStatus.
 const (
-	SecretResponseStatusError    SecretResponseStatus = "Error"
-	SecretResponseStatusNotFound SecretResponseStatus = "NotFound"
-	SecretResponseStatusPending  SecretResponseStatus = "Pending"
-	SecretResponseStatusReady    SecretResponseStatus = "Ready"
+	SecretStatusCurrentStatusError    SecretStatusCurrentStatus = "Error"
+	SecretStatusCurrentStatusNotFound SecretStatusCurrentStatus = "NotFound"
+	SecretStatusCurrentStatusPending  SecretStatusCurrentStatus = "Pending"
+	SecretStatusCurrentStatusReady    SecretStatusCurrentStatus = "Ready"
+)
+
+// Defines values for SimpleSecretStatusCurrentStatus.
+const (
+	SimpleSecretStatusCurrentStatusError    SimpleSecretStatusCurrentStatus = "Error"
+	SimpleSecretStatusCurrentStatusNotFound SimpleSecretStatusCurrentStatus = "NotFound"
+	SimpleSecretStatusCurrentStatusPending  SimpleSecretStatusCurrentStatus = "Pending"
+	SimpleSecretStatusCurrentStatusReady    SimpleSecretStatusCurrentStatus = "Ready"
 )
 
 // Defines values for UpdateSecretRequestType.
@@ -62,17 +71,23 @@ type AuthUserResponse struct {
 
 // CreateSecretRequest Create new k8s secret
 type CreateSecretRequest struct {
+	// Annotations Key-value pairs that are attached to the SecretClaim object
+	Annotations *map[string]string `json:"annotations,omitempty"`
+
 	// Data Key-value data if Opaque else empty
 	Data *map[string]string `json:"data,omitempty"`
 
 	// GenerationConfig Secret generation settings
 	GenerationConfig *GenerationConfig `json:"generationConfig,omitempty"`
 
+	// Labels Key-value pairs that are attached to the SecretClaim object
+	Labels *map[string]string `json:"labels,omitempty"`
+
 	// Name Secret name, unique for the workspace
 	Name string `json:"name"`
 
 	// Namespace Namespace name, where the secret will be created
-	Namespace *string `json:"namespace,omitempty"`
+	Namespace string `json:"namespace"`
 
 	// Type Opaque if secret is set, AutoGenerated if the secret needs to be generated
 	Type CreateSecretRequestType `json:"type"`
@@ -126,7 +141,7 @@ type ErrorUnauthorized struct {
 // GenerationConfig Secret generation settings
 type GenerationConfig struct {
 	// DataKeys List of keys to generate in the secret
-	DataKeys *[]string `json:"data-keys,omitempty"`
+	DataKeys *[]string `json:"dataKeys,omitempty"`
 
 	// Encoding password type
 	Encoding *GenerationConfigEncoding `json:"encoding,omitempty"`
@@ -140,7 +155,7 @@ type GenerationConfigEncoding string
 
 // ListSecretsResponse All SecretClaims in the Namespace
 type ListSecretsResponse struct {
-	Items []SecretResponse `json:"items"`
+	Items []SecretSummary `json:"items"`
 }
 
 // OkResponse defines model for OkResponse.
@@ -150,11 +165,20 @@ type OkResponse struct {
 
 // SecretResponse Response of a k8s secret resources
 type SecretResponse struct {
-	// Data Key-value data if Opaque else empty
+	// Annotations Key-value pairs that are attached to the SecretClaim object
+	Annotations *map[string]string `json:"annotations,omitempty"`
+
+	// CreationTimestamp The timestamp when the SecretClaim object was created
+	CreationTimestamp *time.Time `json:"creationTimestamp,omitempty"`
+
+	// Data Key-value data of the *actual* Kubernetes Secret. Only returned if Synced is true
 	Data *map[string]string `json:"data,omitempty"`
 
-	// ErrorMessage Error message if status == Error
-	ErrorMessage *string `json:"errorMessage,omitempty"`
+	// GenerationConfig Secret generation settings
+	GenerationConfig *GenerationConfig `json:"generationConfig,omitempty"`
+
+	// Labels Key-value pairs that are attached to the SecretClaim object
+	Labels *map[string]string `json:"labels,omitempty"`
 
 	// Name Secret name
 	Name string `json:"name"`
@@ -162,23 +186,79 @@ type SecretResponse struct {
 	// Namespace Namespace name
 	Namespace *string `json:"namespace,omitempty"`
 
-	// Status Current status of operator
-	Status SecretResponseStatus `json:"status"`
+	// ResourceVersion Internal version of this object
+	ResourceVersion *string      `json:"resourceVersion,omitempty"`
+	Status          SecretStatus `json:"status"`
+
+	// Type Opaque or AutoGenerated
+	Type string `json:"type"`
+
+	// Uid Unique ID of the SecretClaim object
+	Uid *string `json:"uid,omitempty"`
+}
+
+// SecretStatus defines model for SecretStatus.
+type SecretStatus struct {
+	// CurrentStatus High-level status determined by the operator (Pending, Ready, Error, NotFound)
+	CurrentStatus SecretStatusCurrentStatus `json:"currentStatus"`
+
+	// ErrorMessage Detailed error message from the operator if currentStatus is Error
+	ErrorMessage *string `json:"errorMessage,omitempty"`
+
+	// LastSyncTime The timestamp of the last successful synchronization
+	LastSyncTime *time.Time `json:"lastSyncTime,omitempty"`
+
+	// SecretName The name of the actual Kubernetes Secret created by the operator
+	SecretName *string `json:"secretName,omitempty"`
+
+	// Synced True if the actual Kubernetes Secret has been successfully created and synchronized
+	Synced bool `json:"synced"`
+}
+
+// SecretStatusCurrentStatus High-level status determined by the operator (Pending, Ready, Error, NotFound)
+type SecretStatusCurrentStatus string
+
+// SecretSummary Summarized version of a SecretClaim for list views
+type SecretSummary struct {
+	// CreationTimestamp The timestamp when the SecretClaim object was created
+	CreationTimestamp *time.Time `json:"creationTimestamp,omitempty"`
+
+	// Name Secret name
+	Name string `json:"name"`
+
+	// Namespace Namespace name
+	Namespace *string            `json:"namespace,omitempty"`
+	Status    SimpleSecretStatus `json:"status"`
 
 	// Type Opaque or AutoGenerated
 	Type string `json:"type"`
 }
 
-// SecretResponseStatus Current status of operator
-type SecretResponseStatus string
+// SimpleSecretStatus defines model for SimpleSecretStatus.
+type SimpleSecretStatus struct {
+	// CurrentStatus High-level status determined by the operator
+	CurrentStatus SimpleSecretStatusCurrentStatus `json:"currentStatus"`
+
+	// Synced True if the actual Kubernetes Secret has been successfully created
+	Synced *bool `json:"synced,omitempty"`
+}
+
+// SimpleSecretStatusCurrentStatus High-level status determined by the operator
+type SimpleSecretStatusCurrentStatus string
 
 // UpdateSecretRequest Request body to update the data of an existing Secret
 type UpdateSecretRequest struct {
-	// Data New key-value data if type='Opaque'
+	// Annotations New set of key-value annotations to overwrite existing annotations. Pass empty object to clear
+	Annotations *map[string]string `json:"annotations,omitempty"`
+
+	// Data New key-value data if type='Opaque'. Pass empty object to clear
 	Data *map[string]string `json:"data,omitempty"`
 
 	// GenerationConfig Secret generation settings
 	GenerationConfig *GenerationConfig `json:"generationConfig,omitempty"`
+
+	// Labels New set of key-value labels to overwrite existing labels. Pass empty object to clear
+	Labels *map[string]string `json:"labels,omitempty"`
 
 	// Regenerate Value to regenerate value in update request. Only if 'AutoGenerated'
 	Regenerate *bool `json:"regenerate,omitempty"`
@@ -1123,7 +1203,7 @@ type UpdateSecretResponseObject interface {
 	VisitUpdateSecretResponse(w http.ResponseWriter) error
 }
 
-type UpdateSecret200JSONResponse SecretResponse
+type UpdateSecret200JSONResponse struct{ OkResponseJSONResponse }
 
 func (response UpdateSecret200JSONResponse) VisitUpdateSecretResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
