# internal/handlers/helpers.go
@@ -1,8 +1,11 @@
 package handlers
 
 import (
+	"time"
+
 	secretsv1alpha1 "github.com/mogilyoy/k8s-secret-manager/api/v1alpha1"
 	"github.com/mogilyoy/k8s-secret-manager/internal/api"
+	corev1 "k8s.io/api/core/v1"
 )
 
 func StrPnc(v string) *string {
@@ -21,9 +24,12 @@ func MapStrStrPnc(v map[string]string) *map[string]string {
 	return &v
 }
 
-func mapClaimToSecretResponse(claim *secretsv1alpha1.SecretClaim, data map[string]string) api.SecretResponse {
+func mapClaimToSecretResponse(claim *secretsv1alpha1.SecretClaim, secret *corev1.Secret) api.SecretResponse {
+	// 1. Определение высокоуровневого статуса (CurrentStatus)
 	externalStatus := "Pending"
 	var errorMessage *string = nil
+	var secretName *string = nil
+	var lastSyncTime *time.Time = nil
 
 	if claim.Status.ErrorMessage != "" {
 		externalStatus = "Error"
@@ -32,19 +38,77 @@ func mapClaimToSecretResponse(claim *secretsv1alpha1.SecretClaim, data map[strin
 		externalStatus = "Ready"
 	}
 
-	var responseData *map[string]string = nil
+	if claim.Status.CreatedSecretName != "" {
+		secretName = &claim.Status.CreatedSecretName
+	}
+	if claim.Status.LastUpdate != nil && !claim.Status.LastUpdate.IsZero() {
+		lastSyncTime = &claim.Status.LastUpdate.Time
+	}
 
-	// Если данные передали (не nil) — берем адрес
-	if data != nil {
-		responseData = &data
+	var generationConfig *api.GenerationConfig
+	if claim.Spec.Generation != nil {
+		enc := api.GenerationConfigEncoding(claim.Spec.Generation.Encoding)
+		dKeys := claim.Spec.Generation.DataKeys
+		generationConfig = &api.GenerationConfig{
+			Length:   int32(claim.Spec.Generation.Length),
+			Encoding: &enc,
+			DataKeys: &dKeys,
+		}
+	}
+
+	secretData := make(map[string]string)
+	if secret != nil {
+		for k, v := range secret.Data {
+			secretData[k] = string(v)
+		}
 	}
 
 	return api.SecretResponse{
-		Name:         claim.Name,
-		Namespace:    &claim.Namespace,
-		Type:         string(claim.Spec.Type),
-		Status:       api.SecretResponseStatus(externalStatus),
-		ErrorMessage: errorMessage,
-		Data:         responseData,
+		Name:      claim.Name,
+		Namespace: &claim.Namespace,
+		Type:      claim.Spec.Type,
+
+		Uid:               StrPnc(string(claim.UID)),
+		CreationTimestamp: &claim.CreationTimestamp.Time,
+		ResourceVersion:   &claim.ResourceVersion,
+		Labels:            &claim.Labels,
+		Annotations:       &claim.Annotations,
+		// -----------------------------------
+
+		Data:             &secretData,
+		GenerationConfig: generationConfig,
+
+		Status: api.SecretStatus{
+			CurrentStatus: api.SecretStatusCurrentStatus(externalStatus),
+			Synced:        claim.Status.Synced,
+			SecretName:    secretName,
+			LastSyncTime:  lastSyncTime,
+			ErrorMessage:  errorMessage,
+		},
 	}
+}
+
+func mapSecretListToResponseList(claims []secretsv1alpha1.SecretClaim) []api.SecretSummary {
+	result := make([]api.SecretSummary, 0, len(claims))
+	for _, claim := range claims {
+		externalStatus := "Pending"
+		if claim.Status.ErrorMessage != "" {
+			externalStatus = "Error"
+		} else if claim.Status.Synced {
+			externalStatus = "Ready"
+		}
+
+		result = append(result, api.SecretSummary{
+			Name:              claim.Name,
+			Namespace:         &claim.Namespace,
+			Type:              claim.Spec.Type,
+			CreationTimestamp: &claim.CreationTimestamp.Time,
+
+			Status: api.SimpleSecretStatus{
+				CurrentStatus: api.SimpleSecretStatusCurrentStatus(externalStatus),
+				Synced:        &claim.Status.Synced,
+			},
+		})
+	}
+	return result
 }
